@@ -38,4 +38,10 @@
       factory=".password.SHA1PasswordManager"
       />
 
+  <utility
+      name="SSHA"
+      provides=".interfaces.IPasswordManager"
+      factory=".password.SSHAPasswordManager"
+      />
+
 </configure>
